src/test/resources/sem/bad/prog9.ilang
routine main() is
  var size : integer is 42
  var a : array[size] integer
end
